--- a/drift-jdbc/drift-jdbc-springboot/src/main/java/io/drift/plugin/jdbc/DBSnapShotDetailComponent.html
+++ b/drift-jdbc/drift-jdbc-springboot/src/main/java/io/drift/plugin/jdbc/DBSnapShotDetailComponent.html
@@ -2,7 +2,8 @@
 <body>
 <wicket:fragment wicket:id="tableSnapShotFragment">
     <span wicket:id="tableName"/>
-    <table _style="table-layout: fixed;width: 170px;" class="table table-bordered table-sm table-hover ">
+    <table _style="table-layout: fixed;width: 170px;"
+           class="table table-responsive table-bordered table-sm table-hover ">
         <thead>
         <tr class="">
             <th wicket:id="columnsInOrder" style="width:150pt">
@@ -12,8 +13,8 @@
         </thead>
         <tbody>
         <tr wicket:id="rows">
-            <td wicket:id="columns" style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis">
-                <span wicket:id="value"></span>
+            <td wicket:id="columns">
+                <span class="d-inline-block text-truncate" style="max-width: 150px;" wicket:id="value"></span>
             </td>
         </tr>
         </tbody>
