--- a/drift-elasticsearch/drift-elasticsearch-springboot/src/main/java/io/drift/plugin/elasticsearch/ui/ElasticSearchSnapshotDetailComponent.html
+++ b/drift-elasticsearch/drift-elasticsearch-springboot/src/main/java/io/drift/plugin/elasticsearch/ui/ElasticSearchSnapshotDetailComponent.html
@@ -9,7 +9,7 @@
                 <td>
                     <span wicket:id="indexName"></span>
                     <p/>
-                    <table class="table table-bordered  table-condensed table-sm">
+                    <table class="table table-bordered  table-condensed table-sm table-responsive table-hover">
                         <tbody>
                         <wicket:container wicket:id="hits">
                             <tr>
